<resources>
    <string name="app_name">Shinrai_V2</string>
    <string name="app_title">Shinrai</string>

    <string name="bt_start_txt">
        始める
    </string>
    <!-- 共通のテキストスタイル -->
    <style name="h1TextStyle_bold">
        <item name="android:fontFamily">@font/poppins_bold</item>
        <item name="android:textSize">32sp</item>
        <item name="android:textColor">#000000</item>
    </style>

    <style name="h1TextStyle_thin">
        <item name="android:fontFamily">@font/poppins_thin</item>
        <item name="android:textSize">32sp</item>
        <item name="android:textColor">#000000</item>
    </style>

    <style name="h2TextStyle_bold">
        <item name="android:fontFamily">@font/poppins_bold</item>
        <item name="android:textSize">24sp</item>
        <item name="android:textColor">#000000</item>
    </style>

    <style name="h2TextStyle_thin">
        <item name="android:fontFamily">@font/poppins_thin</item>
        <item name="android:textSize">24sp</item>
        <item name="android:textColor">#000000</item>
    </style>


    <style name="h3TextStyle_bold">
        <item name="android:fontFamily">@font/poppins_bold</item>
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">#000000</item>
    </style>

    <style name="h3TextStyle_thin">
        <item name="android:fontFamily">@font/poppins_thin</item>
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">#000000</item>
    </style>

    <style name="h4TextStyle_bold">
        <item name="android:fontFamily">@font/poppins_bold</item>
        <item name="android:textSize">16sp</item>
        <item name="android:textColor">#000000</item>
    </style>

    <style name="h4TextStyle_thin">
        <item name="android:fontFamily">@font/poppins_thin</item>
        <item name="android:textSize">16sp</item>
        <item name="android:textColor">#000000</item>
    </style>

    <style name="hintTextStyle_bold">
        <item name="android:fontFamily">@font/poppins_bold</item>
        <item name="android:textSize">16sp</item>
        <item name="android:textColor">#98808080</item>
    </style>

    <style name="Base_Bt_TextStyle">
        <item name="android:fontFamily">@font/poppins_bold</item>
        <item name="android:textSize">24sp</item>
        <item name="android:textColor">#FFFFFF</item>
    </style>

    <style name="Bt_gender_selection">
        <item name="android:fontFamily">@font/poppins_bold</item>
        <item name="android:textSize">20sp</item>
        <item name="android:color">#2C2C2C</item>
    </style>

    <style name="register_confirm">
        <item name="android:fontFamily">@font/poppins_bold</item>
        <item name="android:textSize">40sp</item>
        <item name="android:color">@color/black</item>
    </style>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="lover_id">相手のお名前</string>
    <string name="lover_id_description">相手のフルネームを入力してください</string>

    <string name="lover_gender">相手の性別</string>
    <string name="lover_gender_description">相手の性別を選択してください。</string>
    <string name="text_man">男性</string>
    <string name="text_woman">女性</string>

    <string name="lover_blood_type">相手の血液型</string>
    <string name="lover_blood_type_description">相手の血液型を選択してください</string>

    <string name="lover_personality">相手の性格</string>
    <string name="lover_personality_description">相手の性格を選択してください</string>
    <string name="lover_attention">※該当しない場合、直接入力してください</string>

    <string name="lover_hobby">相手の趣味</string>
    <string name="lover_hobby_description">相手の趣味を選択してください</string>

    <string name="lover_mbti">相手のMBTI</string>
    <string name="lover_mbti_description">相手のMBTIを選択してください</string>

    <string name="text">text</string>

    <string name="before">前へ</string>
    <string name="after">次へ</string>

    <string name="register_confirm">プロフィールを\nこのまま、\n登録しますか。</string>


    <!-- hint_text -->
    <string name="hint_name">フルーネームを入力してください。</string>
    <string name="hint_hobby">趣味を入力してください</string>
    <string name="hint_personality">性格を入力してください</string>
    <string name="hint_mbti">MBTIを入力して検索してください</string>



</resources>