<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterGenderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            style="@style/h1TextStyle_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/lover_personality"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/textView2"
            style="@style/h3TextStyle_thin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/lover_personality_description"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/textView3"
            style="@style/h4TextStyle_thin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/lover_attention"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/edit_lover_personality"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"

            android:background="@drawable/edit_background"
            android:hint="@string/hint_personality"
            android:paddingStart="15dp"

            tools:ignore="RtlSymmetry"
            />

        <LinearLayout
            android:id="@+id/personality_list_button_container"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:visibility="gone"
            >

        </LinearLayout>
    </LinearLayout>
</FrameLayout>